--- a/Changes
+++ b/Changes
@@ -1,8 +1,8 @@
-0.002   2019-03-07 (PERLANCAR)
+0.002   2019-03-07  Released-By: PERLANCAR
 
 	- Add option --format (-f).
 
 
-0.001   2018-09-09 (PERLANCAR)
+0.001   2018-09-09  Released-By: PERLANCAR
 
         - First release.
